--- a/main.css
+++ b/main.css
@@ -3,26 +3,31 @@
 a{text-decoration:none;color:#00aaff;}
 body{font-family: 'Exo 2', sans-serif;background:#fff}/* url("assets/bg.png")}*/
 
+p {
+  font-family: Verdana, sans-serif;
+}
+
 nav{width:100%;background:rgba(22,22,22,0.25);border-bottom:5px solid rgba(22,22,22,0.25);height:59px;position:absolute;}
-  .nav-case{width:960px;margin:auto;}
-  .nav-logo{width:100px;position:relative;float:left;margin-left:-1px;padding-right:10px;}
-  .nav-menu{}
-    .nav-menu ul{list-style:none;overflow:hidden;}
-    .nav-menu li{float:left;}
-    .nav-menu a{display:block;padding:20px 20px;font-size:12pt;color:#fff;transition:.2s;}
-    .nav-menu a:hover{background:rgba(22,22,22,0.25);}
+.nav-case{width:960px;margin:auto;}
+.nav-logo{width:100px;position:relative;float:left;margin-left:-1px;padding-right:10px;}
+.nav-menu{}
+  .nav-menu ul{list-style:none;overflow:hidden;}
+  .nav-menu li{float:left;}
+  .nav-menu a{display:block;padding:20px 20px;font-size:12pt;color:#fff;transition:.2s;}
+  .nav-menu a:hover{background:rgba(22,22,22,0.25);}
 
   .home-image{width:100%;height:100vh;background-image:url("assets/cover-lowres.jpg");background-size:cover;background-attachment:fixed;border-bottom:5px solid #00aaff;}
 
   .content{}
-    .content #background{background:#D46A6A;} /* background-image:url("assets/01.jpg");} */
-    .content #family{background:#88468A;} /* background-image:url("assets/02.jpg");} */
-    .content #hobbies{background:#565695;} /* background-image:url("assets/03.jpg");} */
-    .content #projects{background:#A8C764;} /* background-image:url("assets/04.jpg");} */
-  .content section{background:rgba(200,200,200,0.25);height:100vh;background-size:cover;background-attachment:fixed;}
+    .content #background{background-image:url("http://www.estero.co.nz/new/wp-content/uploads/2014/03/45901_new-zealand.jpg");}
+    .content #family{background:#4f628e;} /* background-image:url("assets/02.jpg");} */
+    .content #hobbies{background:#254272;} /* background-image:url("assets/03.jpg");} */
+    .content #projects{background:#162955;} /* background-image:url("assets/04.jpg");} */
+    .content section{background:rgba(200,200,200,0.25);height:100vh;background-size:cover;background-attachment:fixed;}
     .content section h1{padding:5px 10px;background:#00aaff;color:#fff;max-width:960px;margin:auto;}
-    .content section article{padding:8px;max-width:960px;margin:auto;}
-      .content section article li{margin-left:20px;}
+    .content section article{padding:8px;max-width:960px;margin:auto; color: white; background-color: rgba(120, 135, 171, 0.55);}
+    .content section article li{margin-left:20px; color: white;}
+    .content section article img {margin-top: 10px;}
 
-footer{background:#333;padding:8px;color:#fff;}
-  footer p{max-width:960px;margin:auto;}
+    footer{background:#333;padding:8px;color:#fff;}
+    footer p{max-width:960px;margin:auto;}
