--- a/main.css
+++ b/main.css
@@ -31,3 +31,5 @@ nav{width:100%;background:rgba(22,22,22,0.25);border-bottom:5px solid rgba(22,22
 
     footer{background:#333;padding:8px;color:#fff;}
     footer p{max-width:960px;margin:auto;}
+
+.nombre {text-align: center;padding-top:250px; font-family: Veranda, sans-serif; font-size: 400%; color: white;}
